--- a/index.html
+++ b/index.html
@@ -8,28 +8,46 @@
     <link rel="stylesheet" type="text/css" href="./Styles/normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Ecompany Argentina</title>
 </head>
-<body class="container">
+<body class="container-grid">
     <header>
-        <nav class="navbar">
-                <ul>
-                    <li><a href="index.html"><img src="./Multimedia/green-e-logo.jpg" class="Logo" alt="Ecompanylogo" height="60px" width="196px"></a></li>
-                    <li><a href=".\Pages\productos.html"><i class="fas fa-mobile-alt"></i>Productos</a></li>
-                    <li><a href=".\Pages\ofertas.html"> <i class="fas fa-credit-card"></i>Ofertas</a></li>
-                    <li><a href=".\Pages\sobrenosotros.html"><i class="fas fa-envelope"></i></i>Sobre Nosotros</a></li>
-                    <li><a href=".\Pages\contacto.html"> <i class="fa fa-user"></i> Contacto</a></li>
+        <nav class="navbar navbar-expand-xl navbar-light"  id="navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand"href="index.html"><img src="./Multimedia/green-e-logo.jpg" class="Logo" alt="Ecompanylogo" height="60px" width="196px"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse show" id="navbarLight">
+                <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" href=".\Pages\productos.html"><i class="fas fa-mobile-alt"></i>Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href=".\Pages\ofertas.html"><i class="fas fa-credit-card"></i>Ofertas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"  href=".\Pages\sobrenosotros.html"><i class="fas fa-envelope"></i>Sobre Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href=".\Pages\contacto.html"><i class="fa fa-user"></i>Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-cart-plus"></i></i>Compras</a>
+                  </li>
                 </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" id="barrabusqueda" type="search" placeholder="Escribe Aquí..." aria-label="Search">
+                  <button class="btn btn-outline-primary" id="buttonnavbar">Buscar</button>
+                </form>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
     <main class="main">
         <section id="carousel">
-            <i class="fas fa-chevron-left"></i>
-           <img src=".\Multimedia\Index\MotoEdge20pro.png" alt=motoedge20pro >
-           <i class="fas fa-chevron-right"></i>
-           <p> Aqui iria el Carousel</p>
-           <!-- Aqui no quise mater mas mano porque no sabria como hacerlo -->
+         
         </section>
         <h1 id="ofertaindex">Nuevas Ofertas!</h1>
         <section class="ofertaproductos">
@@ -130,5 +148,6 @@
             </div>
         <div class="copyright">Ecompany - Todos los derechos reservados.</div>
     </footer>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </html>
