--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Ecompany Argentina</title>
 </head>
 <body class="container-grid">
+    <!-- inicio de navbar -->
     <header>
         <nav class="navbar navbar-expand-xl navbar-light"  id="navbar">
             <div class="container-fluid">
@@ -45,10 +46,70 @@
             </div>
           </nav>
     </header>
+    <!-- fin de navbar -->
     <main class="main">
-        <section id="carousel">
-         
-        </section>
+    <!-- inicio de carousel-->
+        <div id="mycarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="2200" >
+                    <div class="overlay-image" style="background-image: url(slide1.jpg);"></div>
+                    <div class="container">
+                        <span>
+                            ¡Te ofrecemos los mejores productos!
+                        </span>
+                        <p>
+                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                        </p>
+                        <a href="#" class="btn btn-lg btn-primary">
+                            Nuestros Productos
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-item"  data-bs-interval="2200">
+                    <div class="overlay-image" style="background-image: url(slide2.jpg);"></div>
+                    <div class="container">
+                        <span>
+                            ¡Te ofrecemos los mejores productos!
+                        </span>
+                        <p>
+                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                        </p>
+                        <a href="#" class="btn btn-lg btn-primary">
+                            Nuestros Productos
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-item"  data-bs-interval="2200">
+                    <div class="overlay-image" style="background-image: url(slide3.jpg);"></div>
+                    <div class="container">
+                        <span>
+                            ¡Te ofrecemos los mejores productos!
+                        </span>
+                        <p>
+                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                        </p>
+                        <a href="#" class="btn btn-lg btn-primary">
+                            Nuestros Productos
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <a href="#mycarousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
+                <span class="sr-only">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a href="#mycarousel" class="carousel-control-next" role="button" data-bs-slide="next">
+                <span class="sr-only">Previous</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+     <!-- fin de carousel-->
+     <!-- inicio de ofertas-->
         <h1 id="ofertaindex">Nuevas Ofertas!</h1>
         <section class="ofertaproductos">
                 <div class="productcard">
@@ -101,6 +162,8 @@
                 </div> 
         </section >
     </main>
+    <!-- Fin de ofertas -->
+    <!-- inicio de footer -->
     <footer class="footer">
         <section class="suscribir">
             <i class="fas fa-envelope-open"></i>
@@ -148,6 +211,8 @@
             </div>
         <div class="copyright">Ecompany - Todos los derechos reservados.</div>
     </footer>
+<!-- footer -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </html>
