Mejore la estrcutura y organizacion HTML y CSS

--- a/index.html
+++ b/index.html
@@ -56,42 +56,42 @@
                 <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="2200" >
-                    <div class="overlay-image" style="background-image: url(slide1.jpg);"></div>
+                <div class="carousel-item active" data-bs-interval="2500">
+                    <div class="overlay-image" style="background-image: url(slide1.png);"></div>
                     <div class="container">
                         <span>
                             ¡Te ofrecemos los mejores productos!
                         </span>
                         <p>
-                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                            Porque sabemos lo que necesitas para tu trabajo y tu vida cotidiana.
                         </p>
                         <a href="#" class="btn btn-lg btn-primary">
                             Nuestros Productos
                         </a>
                     </div>
                 </div>
-                <div class="carousel-item"  data-bs-interval="2200">
-                    <div class="overlay-image" style="background-image: url(slide2.jpg);"></div>
+                <div class="carousel-item"  data-bs-interval="2500">
+                    <div class="overlay-image" style="background-image: url(slide2.png);"></div>
                     <div class="container">
                         <span>
                             ¡Te ofrecemos los mejores productos!
                         </span>
                         <p>
-                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                            Porque sabemos lo que necesitas para tu trabajo y tu vida cotidiana.
                         </p>
                         <a href="#" class="btn btn-lg btn-primary">
                             Nuestros Productos
                         </a>
                     </div>
                 </div>
-                <div class="carousel-item"  data-bs-interval="2200">
-                    <div class="overlay-image" style="background-image: url(slide3.jpg);"></div>
+                <div class="carousel-item"  data-bs-interval="2500">
+                    <div class="overlay-image" style="background-image: url(slide3.png);"></div>
                     <div class="container">
                         <span>
                             ¡Te ofrecemos los mejores productos!
                         </span>
                         <p>
-                            Porque sabemos lo que ncesitas para tu trabajo y tu vida cotidiana.
+                            Porque sabemos lo que necesitas para tu trabajo y tu vida cotidiana.
                         </p>
                         <a href="#" class="btn btn-lg btn-primary">
                             Nuestros Productos
@@ -150,11 +150,47 @@
                 </div> 
                 <div class="productcard">
                     <div class="product-image">
-                        <img src=".\Multimedia\Index\Pocophone M3 128 Gb.jpg" alt="Pocohonem3">
+                        <img src=".\Multimedia\Index\Pocophone M3 128 Gb.jpg" alt="Pocophonem3">
                     </div>
                     <div class="product-info">
                         <strong> Pocophone M3 128 Gb </strong><br>
                         <strong> 25% OFF</strong>
+                    </div>
+                    <div class="productbtn">
+                        <button type="button">Comprar</button>
+                    </div>
+                </div> 
+                <div class="productcard">
+                    <div class="product-image">
+                        <img src=".\Multimedia\Index\MotoE20.webp" alt="Pocohonem3">
+                    </div>
+                    <div class="product-info" alt="MotoE20">
+                        <strong> Moto E20 64 Gb </strong><br>
+                        <strong> 15% OFF</strong>
+                    </div>
+                    <div class="productbtn">
+                        <button type="button">Comprar</button>
+                    </div>
+                </div> 
+                <div class="productcard">
+                    <div class="product-image">
+                        <img src=".\Multimedia\Index\SamsungGalaxyWatch4.webp" alt="SamsungGalaxyWatch4">
+                    </div>
+                    <div class="product-info">
+                        <strong> Samsung Galaxy Watch 4</strong><br>
+                        <strong> 20% OFF</strong>
+                    </div>
+                    <div class="productbtn">
+                        <button type="button">Comprar</button>
+                    </div>
+                </div> 
+                <div class="productcard">
+                    <div class="product-image">
+                        <img src=".\Multimedia\Index\Huawei P40 Lite.webp" alt="Huawei P40 Lite">
+                    </div>
+                    <div class="product-info">
+                        <strong> Huawei P40 Lite 256 Gb </strong><br>
+                        <strong> 10% OFF</strong>
                     </div>
                     <div class="productbtn">
                         <button type="button">Comprar</button>
@@ -167,7 +203,7 @@
     <footer class="footer">
         <section class="suscribir">
             <i class="fas fa-envelope-open"></i>
-                <p>Suscríbete para recibirla información mas reciente <br>
+                <p>Suscríbete para recibir la información más reciente <br>
                     sobre lanzamientos y ofertas de nuestra página.</p>
                 <input type="button" value="Suscribirse" class="button">
         </section>  
