--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -13,6 +13,7 @@
 </head>
 <body class="container-grid">
     <header>
+     <!-- inicio de navbar -->
         <nav class="navbar navbar-expand-xl navbar-light" id="navbar">
             <div class="container-fluid">
               <a class="navbar-brand"href="../index.html"><img src="../Multimedia/green-e-logo.jpg" class="Logo" alt="Ecompanylogo" height="60px" width="196px"></a>
@@ -45,6 +46,8 @@
             </div>
           </nav>
     </header>
+     <!-- Final de navbar -->
+     <!-- inicio de Contacto-->
     <main class="main">
     <section class="seccionformulario">
         <div class="contact-box">
@@ -75,6 +78,8 @@
         </div>
 	</section>
     </main>
+     <!-- Final de Contacto-->
+     <!-- Inicio de Footer-->
     <footer class="footer">
         <div class="containerfooter">
             <div class="containerfooter_row">
@@ -116,6 +121,7 @@
         </div>
             <div class="copyright">Ecompany - Todos los derechos reservados.</div>
     </footer>
+      <!-- Final de Footer-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
