--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -12,6 +12,7 @@
     <title>Ecompany Argentina</title>
 </head>
 <body class="container-grid">
+      <!-- inicio de navbar -->
     <header>
         <nav class="navbar navbar-expand-xl navbar-light" id="navbar">
             <div class="container-fluid">
@@ -45,19 +46,82 @@
             </div>
           </nav>
     </header>
+      <!-- fin de navbar -->
+      <!-- inicio de Ofertas-->
     <main class="main">
-       <!-- <section id="seccionofertas">
-            <div class="ofertasimage"> <div id="textimage"><p> Las mejores ofertas <br> en esta sección!</p></div></div>
-       </section>
-       <section id="productosdestacados"> -->
-           <!-- Tengo que cambiar esta imagen porque no se adapta, quiza cuando haga el carousel va a quedar mejor -->
+            <!-- inicio de carousel-->
+            <div id="mycarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+                    <li data-bs-target="#mycarousel" data-bs-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="2500">
+                        <div class="overlay-image" style="background-image: url(slide1.jpg);"></div>
+                        <div class="container">
+                            <span>
+                                ¡Aqui encontraras las mejores ofertas!
+                            </span>
+                            <p>
+                                Bajo precio y alta calidad.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item"  data-bs-interval="2500">
+                        <div class="overlay-image" style="background-image: url(slide2.jpg);"></div>
+                        <div class="container">
+                            <span>
+                                ¡Aqui encontraras las mejores ofertas!
+                            </span>
+                            <p>
+                                Bajo precio y alta calidad.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item"  data-bs-interval="2500">
+                        <div class="overlay-image" style="background-image: url(slide3.jpg);"></div>
+                        <div class="container">
+                            <span>
+                                ¡Aqui encontraras las mejores ofertas!
+                            </span>
+                            <p>
+                                Bajo precio y alta calidad.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item"  data-bs-interval="2500">
+                        <div class="overlay-image" style="background-image: url(slide4.jpg);"></div>
+                        <div class="container">
+                            <span>
+                                ¡Aqui encontraras las mejores ofertas!
+                            </span>
+                            <p>
+                                Bajo precio y alta calidad.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#mycarousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
+                    <span class="sr-only">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </a>
+                <a href="#mycarousel" class="carousel-control-next" role="button" data-bs-slide="next">
+                    <span class="sr-only">Previous</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </a>
+            </div>
+         <!-- fin de carousel-->
             <h1 id="destacadosdelmes"> Destacados del Mes</h1>
-                <form>
-                    <ul>
-                        <li class="smartphones"><a href="#">Smartphones</a></li>
-                        <li class="accesorios"><a href="#">Accesorios</a></li>
-                    </ul>
-                </form>
+                <div class="line">
+                    <form>
+                        <ul>
+                            <li class="smartphones"><a href="#">Smartphones</a></li>
+                            <li class="accesorios"><a href="#">Accesorios</a></li>
+                        </ul>
+                    </form>
+                </div>
        </section>
        <section class="ofertaproductos">
         <div class="productcard">
@@ -108,7 +172,45 @@
                 <button type="button">Comprar</button>
             </div>
         </div> 
+        <div class="productcard">
+            <div class="product-image">
+                <img src="..\Multimedia\Index\MotoE20.webp" alt="Pocohonem3">
+            </div>
+            <div class="product-info" alt="MotoE20">
+                <strong> Moto E20 64 Gb </strong><br>
+                <strong> 15% OFF</strong>
+            </div>
+            <div class="productbtn">
+                <button type="button">Comprar</button>
+            </div>
+        </div> 
+        <div class="productcard">
+            <div class="product-image">
+                <img src="..\Multimedia\Index\SamsungGalaxyWatch4.webp" alt="SamsungGalaxyWatch4">
+            </div>
+            <div class="product-info">
+                <strong> Samsung Galaxy Watch 4</strong><br>
+                <strong> 20% OFF</strong>
+            </div>
+            <div class="productbtn">
+                <button type="button">Comprar</button>
+            </div>
+        </div> 
+        <div class="productcard">
+            <div class="product-image">
+                <img src="..\Multimedia\Index\Huawei P40 Lite.webp" alt="Huawei P40 Lite">
+            </div>
+            <div class="product-info">
+                <strong> Huawei P40 Lite 256 Gb </strong><br>
+                <strong> 10% OFF</strong>
+            </div>
+            <div class="productbtn">
+                <button type="button">Comprar</button>
+            </div>
+        </div> 
     </main>
+       <!-- Final de Ofertas-->
+        <!-- inicio de footer -->
     <footer class="footer">
         <div class="containerfooter">
                <div class="containerfooter_row">
@@ -150,7 +252,9 @@
            </div>
            <div class="copyright">Ecompany - Todos los derechos reservados.</div>
    </footer>
+    <!-- Final de footer -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </body>
 </html>
