--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -12,6 +12,7 @@
     <title>Ecompany Argentina</title>
 </head>
 <body class="container-grid">
+        <!-- inicio de navbar -->
     <header>
         <nav class="navbar navbar-expand-xl navbar-light" id="navbar">
             <div class="container-fluid">
@@ -45,6 +46,8 @@
             </div>
           </nav>
     </header>
+      <!-- fin de navbar -->
+      <!-- Inicio de productos -->
     <main class="main">
         <h1 class="products">¡Nuestras Marcas!</h1> <br>
         <strong class= "subtitle"> Porque queremos garantizar calidad y brindar un buen servicio. </strong>
@@ -106,8 +109,46 @@
                                 <button type="button">Comprar</button>
                             </div>
                         </div> 
+                        <div class="productcard">
+                            <div class="product-image">
+                                <img src="../Multimedia/Productos/MotoEdge20ProLite.webp" alt="MotoEdge20ProLite">
+                            </div>
+                            <div class="product-info">
+                                <strong> Moto Edge 20Pro Lite 256GB 12GB RAM</strong><br>
+                                <strong> AR$ 105,400.00</strong>
+                            </div>
+                            <div class="productbtn">
+                                <button type="button">Comprar</button>
+                            </div>
+                        </div> 
+                        <div class="productcard">
+                            <div class="product-image">
+                                <img src="../Multimedia/Productos/Samsung20Pro.webp" alt="Samsung20Pro">
+                            </div>
+                            <div class="product-info">
+                                <strong> Samsung 20Pro Plus 128GB 6GB RAM </strong><br>
+                                <strong> AR$ 92,400.00</strong>
+                            </div>
+                            <div class="productbtn">
+                                <button type="button">Comprar</button>
+                            </div>
+                        </div> 
+                        <div class="productcard">
+                            <div class="product-image">
+                                <img src="../Multimedia/Productos/XiaomiRedmiNote10Pro.webp" alt="samsunggalaxywatch">
+                            </div>
+                            <div class="product-info">
+                                <strong> Xiaomi Redmi Note 10 Pro 128GB 6GB RAM </strong><br>
+                                <strong> AR$ 110,400.00</strong>
+                            </div>
+                            <div class="productbtn">
+                                <button type="button">Comprar</button>
+                            </div>
+                        </div> 
                     </section>
     </main>
+     <!-- Fin de productos -->
+     <!-- Inico de footer -->
     <footer class="footer">
         <div class="containerfooter">
             <div class="containerfooter_row">
@@ -149,6 +190,7 @@
         </div>
             <div class="copyright">Ecompany - Todos los derechos reservados.</div>
     </footer>
+     <!-- Fin de footer -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
