--- a/Pages/sobrenosotros.html
+++ b/Pages/sobrenosotros.html
@@ -12,6 +12,7 @@
     <title>Ecompany Argentina</title>
 </head>
 <body class="container-grid">
+      <!-- inicio de navbar -->
     <header>
         <nav class="navbar navbar-expand-xl navbar-light" id="navbar">
             <div class="container-fluid">
@@ -45,7 +46,9 @@
             </div>
           </nav>
     </header>
+        <!-- fin de navbar -->
     <main class="main">
+      <!-- inicio de Imagenes-->
     <section class="containernosotros">
             <div class="imagenosotros">
                 <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/assets/global/about-us/brand/brand-story/1920_640_1.png?$1920_N_JPG$">
@@ -74,6 +77,8 @@
                 </div>
             </div>
     </section>
+      <!-- Final de Imagenes-->
+       <!-- inicio de footer -->
     </main>
     <footer class="footer">
         <div class="containerfooter">
@@ -116,6 +121,7 @@
         </div>
             <div class="copyright">Ecompany - Todos los derechos reservados.</div>
     </footer>
+     <!-- Final de footer -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
