Agregue Sass a una seccion, modifique colores y agregue links a productos

--- a/Pages/auriculares.html
+++ b/Pages/auriculares.html
@@ -75,11 +75,11 @@
                     <section class="ofertaproductos">
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Xiaomi Note 10 Pro 128 Gb + 8 Ram.jpg" alt="note10pro">
+                                <img src="..\Multimedia\Index\XiaomiAirdots.webp" alt="auricularesxiaomiairdots">
                             </div>
                             <div class="product-info">
-                                <strong> Xiaomi Note 10 Pro 128GB+ 8 Ram</strong><br>
-                                <strong> AR$73,498.00</strong>
+                                <strong> XiaomiAirdots </strong><br>
+                                <strong> AR$ 3,500</strong>
                             </div>
                             <div class="productbtn">
                                 <button type="button">Comprar</button>
@@ -87,11 +87,11 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Poco X3 PRO 128 Gb + 6 Ram.jpg" alt="pocox3">
+                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds.webp" alt="auricularessamsunggalaxybuds">
                             </div>
                             <div class="product-info">
-                                <strong> Poco X3 PRO 128 Gb + 6 Ram </strong><br>
-                                <strong> AR$ 44,000.00</strong>
+                                <strong> Samsung Galaxy Buds</strong><br>
+                                <strong> AR$ 13,000</strong>
                             </div>
                             <div class="productbtn">
                                 <button type="button">Comprar</button>
@@ -99,47 +99,11 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Galaxy Watch4 Classic Bluetooth.webp" alt="samsunggalaxywatch">
+                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds 2.webp" alt="auricularessamsunggalaxybuds2">
                             </div>
                             <div class="product-info">
-                                <strong> Galaxy Watch4 Classic Bluetooth </strong><br>
-                                <strong> AR$ 35,400.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
-                                <img src="../Multimedia/Productos/MotoEdge20ProLite.webp" alt="MotoEdge20ProLite">
-                            </div>
-                            <div class="product-info">
-                                <strong> Moto Edge 20Pro Lite 256GB 12GB RAM</strong><br>
-                                <strong> AR$ 105,400.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
-                                <img src="../Multimedia/Productos/Samsung20Pro.webp" alt="Samsung20Pro">
-                            </div>
-                            <div class="product-info">
-                                <strong> Samsung 20Pro Plus 128GB 6GB RAM </strong><br>
-                                <strong> AR$ 92,400.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
-                                <img src="../Multimedia/Productos/XiaomiRedmiNote10Pro.webp" alt="samsunggalaxywatch">
-                            </div>
-                            <div class="product-info">
-                                <strong> Xiaomi Redmi Note 10 Pro 128GB 6GB RAM </strong><br>
-                                <strong> AR$ 110,400.00</strong>
+                                <strong> Samsung Galaxy Buds 2 </strong><br>
+                                <strong>AR$ 15,000</strong>
                             </div>
                             <div class="productbtn">
                                 <button type="button">Comprar</button>
