--- a/Pages/smartwatches.html
+++ b/Pages/smartwatches.html
@@ -75,30 +75,6 @@
                     <section class="ofertaproductos">
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Xiaomi Note 10 Pro 128 Gb + 8 Ram.jpg" alt="note10pro">
-                            </div>
-                            <div class="product-info">
-                                <strong> Xiaomi Note 10 Pro 128GB+ 8 Ram</strong><br>
-                                <strong> AR$73,498.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
-                                <img src="../Multimedia/Productos/Poco X3 PRO 128 Gb + 6 Ram.jpg" alt="pocox3">
-                            </div>
-                            <div class="product-info">
-                                <strong> Poco X3 PRO 128 Gb + 6 Ram </strong><br>
-                                <strong> AR$ 44,000.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
                                 <img src="../Multimedia/Productos/Galaxy Watch4 Classic Bluetooth.webp" alt="samsunggalaxywatch">
                             </div>
                             <div class="product-info">
@@ -111,11 +87,11 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/MotoEdge20ProLite.webp" alt="MotoEdge20ProLite">
+                                <img src="../Multimedia/Productos/Smartwatch Amazfit.webp" alt="ssmartwatchamazfit">
                             </div>
                             <div class="product-info">
-                                <strong> Moto Edge 20Pro Lite 256GB 12GB RAM</strong><br>
-                                <strong> AR$ 105,400.00</strong>
+                                <strong> Smartwatch Amazfit </strong><br>
+                                <strong> AR$ 12,400.00</strong>
                             </div>
                             <div class="productbtn">
                                 <button type="button">Comprar</button>
@@ -123,23 +99,11 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Samsung20Pro.webp" alt="Samsung20Pro">
+                                <img src="../Multimedia/Productos/Smartwatch Honorband 6.webp" alt="ssmartwatchhonorband6">
                             </div>
                             <div class="product-info">
-                                <strong> Samsung 20Pro Plus 128GB 6GB RAM </strong><br>
-                                <strong> AR$ 92,400.00</strong>
-                            </div>
-                            <div class="productbtn">
-                                <button type="button">Comprar</button>
-                            </div>
-                        </div> 
-                        <div class="productcard">
-                            <div class="product-image">
-                                <img src="../Multimedia/Productos/XiaomiRedmiNote10Pro.webp" alt="samsunggalaxywatch">
-                            </div>
-                            <div class="product-info">
-                                <strong> Xiaomi Redmi Note 10 Pro 128GB 6GB RAM </strong><br>
-                                <strong> AR$ 110,400.00</strong>
+                                <strong> Smartwatch Honorband 6</strong><br>
+                                <strong> AR$ 7,500.00</strong>
                             </div>
                             <div class="productbtn">
                                 <button type="button">Comprar</button>
