--- a/Pages/sobrenosotros.html
+++ b/Pages/sobrenosotros.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Ecompany Argentina tiene una trayectoria importante y queremos brindarte nuestro obetivo como empresa!😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas, Informacioón, Nosotros">
     <link rel="stylesheet" type="text/css" href="../Styles\sobrenosotros.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina- Nuestra Historia</title>
 </head>
 <body class="container-grid">
       <!-- inicio de navbar -->
@@ -51,7 +53,7 @@
       <!-- inicio de Imagenes-->
     <section class="containernosotros">
             <div class="imagenosotros">
-                <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/assets/global/about-us/brand/brand-story/1920_640_1.png?$1920_N_JPG$">
+                <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/assets/global/about-us/brand/brand-story/1920_640_1.png?$1920_N_JPG$" alt="Imágen Sobre Nosotros">
                <div class="imagennosotros_texto">
                     <strong>Quienes Somos y que nos impulsa</strong>
                 </div>
@@ -65,7 +67,7 @@
                 </strong>
             </div>
             <div class="imagenosotros">
-                <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/assets/global/about-us/brand/brand-story/1440_640_1.png?$FB_TYPE_A_PNG$">
+                <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/assets/global/about-us/brand/brand-story/1440_640_1.png?$FB_TYPE_A_PNG$"  alt="Imágen Sobre Nosotros">
                 <div class="imagennosotros_texto_2">
                     <h2> Vivimos acorde a los valores que nos impulsan </h2>
                     <strong>
