--- a/Pages/auriculares.html
+++ b/Pages/auriculares.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Sección de Auriculaes de Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
     <link rel="stylesheet" type="text/css" href="..\Styles\productos.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina - Auriculares</title>
 </head>
 <body class="container-grid">
         <!-- inicio de navbar -->
@@ -53,13 +55,13 @@
         <strong class= "subtitle"> Porque queremos garantizar calidad y brindar un buen servicio. </strong>
             <section id= "seccionmarcas">
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/MotorolaLogo.png" alt="motorola">
+                 <img src="../Multimedia/Productos/MotorolaLogo.png" alt="Motorola">
                     </div>
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/XiaomiLogo.png" alt="xiaomi">
+                 <img src="../Multimedia/Productos/XiaomiLogo.png" alt="Xiaomi">
                     </div>
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/SamsungLogo.png" alt="samsung">
+                 <img src="../Multimedia/Productos/SamsungLogo.png" alt="Samsung">
                     </div>
                     <div class= "marcas">
                  <img src="../Multimedia/Productos/HuaweiLogo.png" alt="Huawei">
@@ -87,7 +89,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds.webp" alt="auricularessamsunggalaxybuds">
+                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds.webp" alt="Auriculares Samsung Galaxybuds">
                             </div>
                             <div class="product-info">
                                 <strong> Samsung Galaxy Buds</strong><br>
@@ -99,7 +101,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds 2.webp" alt="auricularessamsunggalaxybuds2">
+                                <img src="..\Multimedia\Productos\Samsung Galaxy Buds 2.webp" alt="Auriculares Samsung Galaxybuds2">
                             </div>
                             <div class="product-info">
                                 <strong> Samsung Galaxy Buds 2 </strong><br>
