--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Comparte tu contacto con nuestro staff de Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas, Contacto">
     <link rel="stylesheet" type="text/css" href="../Styles/contacto.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina - Contacto</title>
 </head>
 <body class="container-grid">
     <header>
@@ -51,7 +53,7 @@
     <main class="main">
     <section class="seccionformulario">
         <div class="contact-box">
-            <img src="../Multimedia/green-e-logo.jpg" class="logocontacto" alt="Ecompanylogo">
+            <img src="../Multimedia/green-e-logo.jpg" class="logocontacto" alt="Ecompany logo">
                 <div class="content-box">
                     <h1 class="h1contacto"> Contactanos!</h1>
                     <form action="#">
