--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Las mejores ofertas y mejores descuentos los encontras en esta sección de Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
     <link rel="stylesheet" type="text/css" href="..\Styles\ofertas.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina- Ofertas 😎 </title>
 </head>
 <body class="container-grid">
       <!-- inicio de navbar -->
@@ -126,7 +128,7 @@
        <section class="ofertaproductos">
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\SamsungA72.webp" alt="Samsunga72">
+                <img src="..\Multimedia\Index\SamsungA72.webp" alt="Samsung A72">
             </div>
             <div class="product-info">
                 <strong> Samsung a72 128GB </strong><br>
@@ -138,7 +140,7 @@
         </div> 
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\XiaomiAirdots.webp" alt="auricularesxiaomiairdots">
+                <img src="..\Multimedia\Index\XiaomiAirdots.webp" alt="Auriculares Xiaomiairdots">
             </div>
             <div class="product-info">
                 <strong> XiaomiAirdots </strong><br>
@@ -150,7 +152,7 @@
         </div> 
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\XiaomiSmartband6.webp" alt="Sxiaomismartband">
+                <img src="..\Multimedia\Index\XiaomiSmartband6.webp" alt="Xiaomi Smartband 6">
             </div>
             <div class="product-info">
                 <strong> Xiaomi Smartband 6 </strong><br>
@@ -162,7 +164,7 @@
         </div> 
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\Pocophone M3 128 Gb.jpg" alt="Pocohonem3">
+                <img src="..\Multimedia\Index\Pocophone M3 128 Gb.jpg" alt="Pocophone M3">
             </div>
             <div class="product-info">
                 <strong> Pocophone M3 128 Gb </strong><br>
@@ -174,7 +176,7 @@
         </div> 
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\MotoE20.webp" alt="Pocohonem3">
+                <img src="..\Multimedia\Index\MotoE20.webp" alt="Moto E20">
             </div>
             <div class="product-info" alt="MotoE20">
                 <strong> Moto E20 64 Gb </strong><br>
@@ -186,7 +188,7 @@
         </div> 
         <div class="productcard">
             <div class="product-image">
-                <img src="..\Multimedia\Index\SamsungGalaxyWatch4.webp" alt="SamsungGalaxyWatch4">
+                <img src="..\Multimedia\Index\SamsungGalaxyWatch4.webp" alt="Samsung Galaxy Watch4">
             </div>
             <div class="product-info">
                 <strong> Samsung Galaxy Watch 4</strong><br>
