--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Los mejores productos cuentan con la mejor calidad del mercado brindada por Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
     <link rel="stylesheet" type="text/css" href="..\Styles\productos.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina - Nuestros Productos</title>
 </head>
 <body class="container-grid">
         <!-- inicio de navbar -->
