--- a/Pages/smartbands.html
+++ b/Pages/smartbands.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Sección de Smartbands de Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
     <link rel="stylesheet" type="text/css" href="..\Styles\productos.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina - Smartbands</title>
 </head>
 <body class="container-grid">
         <!-- inicio de navbar -->
@@ -75,7 +77,7 @@
                     <section class="ofertaproductos">
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="..\Multimedia\Index\XiaomiSmartband6.webp" alt="Sxiaomismartband">
+                                <img src="..\Multimedia\Index\XiaomiSmartband6.webp" alt="Xiaomi Smartband 6">
                             </div>
                             <div class="product-info">
                                 <strong> Xiaomi Smartband 6 </strong><br>
@@ -87,7 +89,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="..\Multimedia\Productos\Smartband Noga.webp" alt="SmartbandNoga">
+                                <img src="..\Multimedia\Productos\Smartband Noga.webp" alt="Smartband Noga">
                             </div>
                             <div class="product-info">
                                 <strong> Noga  Smartband</strong><br>
@@ -99,7 +101,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="..\Multimedia\Productos\Smartband5.webp" alt="Smartbandxiaomi5">
+                                <img src="..\Multimedia\Productos\Smartband5.webp" alt="Xiaomi Smartband 5">
                             </div>
                             <div class="product-info">
                                 <strong> Xiaomi Smartband 5</strong><br>
