--- a/Pages/smartphones.html
+++ b/Pages/smartphones.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "Sección de Smartphones de Ecompany Argentina😎" >
+    <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
     <link rel="stylesheet" type="text/css" href="..\Styles\productos.css">
     <link rel="stylesheet" type="text/css" href="..\normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="../Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ecompany Argentina</title>
+    <title>Ecompany Argentina - Smartphones</title>
 </head>
 <body class="container-grid">
         <!-- inicio de navbar -->
@@ -53,13 +55,13 @@
         <strong class= "subtitle"> Porque queremos garantizar calidad y brindar un buen servicio. </strong>
             <section id= "seccionmarcas">
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/MotorolaLogo.png" alt="motorola">
+                 <img src="../Multimedia/Productos/MotorolaLogo.png" alt="Motorola">
                     </div>
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/XiaomiLogo.png" alt="xiaomi">
+                 <img src="../Multimedia/Productos/XiaomiLogo.png" alt="Xiaomi">
                     </div>
                     <div class= "marcas">
-                 <img src="../Multimedia/Productos/SamsungLogo.png" alt="samsung">
+                 <img src="../Multimedia/Productos/SamsungLogo.png" alt="Samsung">
                     </div>
                     <div class= "marcas">
                  <img src="../Multimedia/Productos/HuaweiLogo.png" alt="Huawei">
@@ -75,7 +77,7 @@
                     <section class="ofertaproductos">
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Xiaomi Note 10 Pro 128 Gb + 8 Ram.jpg" alt="note10pro">
+                                <img src="../Multimedia/Productos/Xiaomi Note 10 Pro 128 Gb + 8 Ram.jpg" alt="Xiaomi Note 10 Pro">
                             </div>
                             <div class="product-info">
                                 <strong> Xiaomi Note 10 Pro 128GB+ 8 Ram</strong><br>
@@ -87,7 +89,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Poco X3 PRO 128 Gb + 6 Ram.jpg" alt="pocox3">
+                                <img src="../Multimedia/Productos/Poco X3 PRO 128 Gb + 6 Ram.jpg" alt="Poco X3">
                             </div>
                             <div class="product-info">
                                 <strong> Poco X3 PRO 128 Gb + 6 Ram </strong><br>
@@ -99,7 +101,7 @@
                         </div>
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/MotoEdge20ProLite.webp" alt="MotoEdge20ProLite">
+                                <img src="../Multimedia/Productos/MotoEdge20ProLite.webp" alt="MotoEdge 20 ProLite">
                             </div>
                             <div class="product-info">
                                 <strong> Moto Edge 20Pro Lite 256GB 12GB RAM</strong><br>
@@ -111,7 +113,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/Samsung20Pro.webp" alt="Samsung20Pro">
+                                <img src="../Multimedia/Productos/Samsung20Pro.webp" alt="Samsung20 Pro">
                             </div>
                             <div class="product-info">
                                 <strong> Samsung 20Pro Plus 128GB 6GB RAM </strong><br>
@@ -123,7 +125,7 @@
                         </div> 
                         <div class="productcard">
                             <div class="product-image">
-                                <img src="../Multimedia/Productos/XiaomiRedmiNote10Pro.webp" alt="samsunggalaxywatch">
+                                <img src="../Multimedia/Productos/XiaomiRedmiNote10Pro.webp" alt="Xiaomi Redmi Note 10 Pro">
                             </div>
                             <div class="product-info">
                                 <strong> Xiaomi Redmi Note 10 Pro 128GB 6GB RAM </strong><br>
