--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -56,7 +56,7 @@
             <img src="../Multimedia/green-e-logo.jpg" class="logocontacto" alt="Ecompany logo">
                 <div class="content-box">
                     <h1 class="h1contacto"> Contactanos!</h1>
-                    <form action="#">
+                    <form action="#" netlify>
                         <label class="labelfont" for="Nombre">Nombre </label>
                             <input class="field" type="text" placeholder="Escribe tu Nombre" required><br>
                         <label class="labelfont" for="email">E-mail </label>
