--- a/Pages/compras.html
+++ b/Pages/compras.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-xl navbar-light"  id="navbar">
             <div class="container-fluid">
-              <a class="navbar-brand"href="index.html"><img src="../Multimedia/green-e-logo.jpg" class="Logo" alt="Ecompanylogo" height="60px" width="196px"></a>
+              <a class="navbar-brand"href="../index.html"><img src="../Multimedia/green-e-logo.jpg" class="Logo" alt="Ecompanylogo" height="60px" width="196px"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
