--- a/Pages/compras.html
+++ b/Pages/compras.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos Ecompany Argentina, nuestro objetivo es brindar al público producots indispensables para su vida cotidiana. La mejor calidad de smartphones, smartwatches, smartbands y auriculares los encontras en Ecompany Argentina 😎" >
     <meta name="keywords" content="Compañía, Venta, Smartphones, Smartwatches, Auriculares, Ofertas">
-    <link rel="stylesheet" type="text/css" href="../Styles/index.css">
+    <link rel="stylesheet" type="text/css" href="../Styles/compras.css">
     <link rel="stylesheet" type="text/css" href="./Styles/normalize.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./Multimedia/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/006037882f.js" crossorigin="anonymous"></script>
@@ -54,17 +54,10 @@
     </header>
     <!-- fin de navbar -->
     <main class="main">
-            <img src="../Multimedia/Proximamente.png" alt="Proximamente" style="width: 100%;">
+
     </main>
-    <!-- Fin de ofertas -->
     <!-- inicio de footer -->
     <footer class="footer">
-        <section class="suscribir">
-            <i class="fas fa-envelope-open"></i>
-                <p>Suscríbete para recibir la información más reciente <br>
-                    sobre lanzamientos y ofertas de nuestra página.</p>
-                <input type="button" value="Suscribirse" class="button">
-        </section>  
             <div class="containerfooter">
                 <div class="containerfooter_row">
                     <div class="containerfooter_row_col">
