--- a/Pages/smartwatches.html
+++ b/Pages/smartwatches.html
@@ -56,7 +56,7 @@
       <!-- Inicio de productos -->
     <main class="main">
         <h1 class="products">¡Nuestras Marcas!</h1> <br>
-        <strong class= "subtitle"> Porque queremos garantizar calidad y brindar un buen servicio. </strong>
+        <p class= "subtitle"> Porque queremos garantizar calidad y brindar un buen servicio. </p>
             <section id= "seccionmarcas">
                     <div class= "marcas">
                  <img src="../Multimedia/Productos/MotorolaLogo.png" alt="Motorola">
